--- a/Epic Games/index.html
+++ b/Epic Games/index.html
@@ -928,10 +928,19 @@
                 <div class="ad-footer ad-footer2">
                   <h1>MYSTERY GAME</h1>
                 </div>
-                <h2>Unlocking in 02:22:22:22</h2>
+                <h2>Unlocking in 02:00:00:02</h2>
               </div>
             </div>
           </div>
+        </section>
+
+        <!-- Section2 End -->
+
+        <!-- Section3 Start -->
+
+        <section class="Fortnite-Experiences">
+          <h1 class="section3-title">Fortnite Experiences</h1>
+          <div class="btn-fortnite"><h1>VISIT FORTNITE.COM</h1></div>
         </section>
  </body>
 </html>
