--- a/Epic Games/index.html
+++ b/Epic Games/index.html
@@ -941,6 +941,58 @@
         <section class="Fortnite-Experiences">
           <h1 class="section3-title">Fortnite Experiences</h1>
           <div class="btn-fortnite"><h1>VISIT FORTNITE.COM</h1></div>
+          <div class="fortnite-event">
+          <div class="Experience lego-fortnite">
+            <div class="section3-bg-color"></div>
+            <div class="circle Wishlist-button">
+            <i class="fa-solid fa-plus" id="plus"></i>                
+            </div>
+            <div class="tooltip tooltip3"><p>Add to Wishlist</p></div>    
+          </div>
+          <h2>Experience</h2>
+          <h3>LEGO® Fortnite®</h3>
+          <h1>Free</h1>
+          </div>
+          <div class="fortnite-event fortnite-event2">
+          <div class="Experience rocket-racing">
+            <div class="section3-bg-color"></div>
+            <div class="circle Wishlist-button">
+            <i class="fa-solid fa-plus" id="plus"></i>                
+            </div>
+            <div class="tooltip tooltip3"><p>Add to Wishlist</p></div>    
+          </div>
+          <h2>Experience</h2>
+          <h3>Rocket Racing</h3>
+          <h1>Free</h1>
+          </div>
+          <div class="fortnite-event">
+          <div class="Experience fortnite-festival">
+            <div class="section3-bg-color"></div>
+            <div class="circle Wishlist-button">
+            <i class="fa-solid fa-plus" id="plus"></i>                
+            </div>
+            <div class="tooltip tooltip3"><p>Add to Wishlist</p></div>    
+          </div>
+          <h2>Experience</h2>
+          <h3>Fortnite Festival</h3>
+          <h1>Free</h1>
+          </div>
+          <div class="fortnit-ad">
+            <div class="fortnit-ad-image">
+              <div class="section3-bg-color"></div>
+            </div>
+            <h1>Fortnite</h1>
+            <p>Cowabunga! The Teenage Mutant Ninja Turtles and investigative reporter April O'Neil emerge for Winterfest.</p>
+            <h2>Play For Free</h2>
+          </div>
+          <div class="fallguys-ad">
+            <div class="fallguys-ad-image">
+              <div class="section3-bg-color"></div>
+            </div>
+            <h1>Fall Guys</h1>
+            <p>Treat your elves and yourselves with the Winter Blunderland Fame Pass. Available until January 15.</p>
+            <h2>Play For Free</h2>
+          </div>
         </section>
  </body>
 </html>
