--- a/Epic Games/index.html
+++ b/Epic Games/index.html
@@ -165,8 +165,10 @@ crossorigin="anonymous"
     <h1 class="nav-section">Support</h1>
   </li>
   <li>
-    <h1 class="nav-section margin">Unreal Engine</h1>
+    <h1 class="nav-section margin">Unreal</h1>
   </li>
+  <span></span>
+    <div class="group">
   <li class="languages">
     <i class="fa-solid fa-earth-americas"
     id="earth"></i>
@@ -190,7 +192,6 @@ crossorigin="anonymous"
       <p class="language-hover">Türkçe</p>
       <p class="language-hover">简体中文</p>
       <p class="language-hover">繁體中文</p>
-    </div>
     </div>
 </li>
   <li>
@@ -320,7 +321,7 @@ crossorigin="anonymous"
       <label for="radio2" class="game-title liner2">
         <div class="bg-color"></div>
         <div class="title-games-image The-Game-Awards-image"></div>
-        <p class="title-games-text title-games-text2">The Game Awards</p>         
+        <p class="title-games-text title-games-text2">Game Awards</p>         
     </label>       
       <label for="radio3" class="game-title liner3">
         <div class="bg-color"></div>
@@ -2099,6 +2100,8 @@ crossorigin="anonymous"
         <h5>Free</h5>
         </div>
       </div>
+     </div>
+     <div class="category">
       <div class="overflow-box">
         <div class="overflow-games Gloomhaven">
           <div class="overflow-bg-color"></div>
@@ -2384,7 +2387,7 @@ crossorigin="anonymous"
       <div class="tooltip"><p>Add to Wishlist</p></div>     
       </div>
       <h2>Base Game</h2>
-      <h3>1001 Jigsaw. Earth Chronicles</h3>
+      <h3>1001 Jigsaw. Earth <br> Chronicles</h3>
       <div class="details details2">
         <p>NOW ON EPIC</p>
         </div>
@@ -2537,5 +2540,8 @@ crossorigin="anonymous"
       </div>
     </div>
   </footer>
+
+    <!---------- Footer End ---------->
+    
 </body>
 </html>
