--- a/Epic Games/index.html
+++ b/Epic Games/index.html
@@ -167,9 +167,8 @@ crossorigin="anonymous"
   <li>
     <h1 class="nav-section margin">Unreal</h1>
   </li>
-  <span></span>
     <div class="group">
-  <li class="languages">
+  <li class="languages hidden">
     <i class="fa-solid fa-earth-americas"
     id="earth"></i>
     <div class="room"></div>
@@ -195,13 +194,16 @@ crossorigin="anonymous"
     </div>
 </li>
   <li>
-    <div class="user">
+    <div class="user hidden">
       <i class="fa-regular fa-user"></i>
     </div>
   </li>
-  <li class="download">
+  <li class="download hidden">
     <h1 class="text-download">Download</h1>
   </li>
+    <li>
+      <i class="fa-solid fa-bars"></i>
+    </li>
 </ul>
 </nav>
 
@@ -217,11 +219,17 @@ crossorigin="anonymous"
     <input type="text" placeholder="Search store"
     class="search"> 
   </div>
+  <span class="hidden">
   <ul>
     <li><p class="sub-nav-text color-white">Discover</p></li>
     <li><p class="sub-nav-text">Browse</p></li>
     <li><p class="sub-nav-text">News</p></li>
   </ul>
+  </span>
+  <p class="sub-nav-text2">Discover <i
+    class="fa-solid fa-angle-left"
+    id="angle2"
+  ></i></p>
   </div>
 </nav>
 
@@ -242,7 +250,7 @@ crossorigin="anonymous"
           <div class="Fortnite">
             <div class="transparent-box Fortnite-transparent-box"></div>
           <h3 >New Chapter</h3>
-          <h4>Join “The Underground” in Chapter 5 Season 1 and battle bosses, modify your weapons, take the Island’s train and more!</h4>
+          <h4>Join “The Underground” in Chapter 5 <br>Season 1 and battle bosses, modify your <br>weapons, take the Island’s train and more!</h4>
           <h2>Free</h2>
           <a href="" class="buy">PLAY FOR FREE</a>
           <a href="" class="Wishlist">
@@ -287,7 +295,7 @@ crossorigin="anonymous"
           <div class="dead-by-daylight">
           <div class="transparent-box dead-by-daylight-transparent-box"></div>
           <h3 class="">Now Available</h3>
-          <h4>Meet your new best friend ‘til the end. Dead by Daylight: Chucky brings an iconic horror legend into The Fog.</h4>
+          <h4>Meet your new best friend ‘til the end. Dead <br>by Daylight: Chucky brings an iconic horror <br>legend into The Fog.</h4>
           <h2>Starting at <p class="bold">$4.99</p></h2>
           <a href="" class="buy">BUY NOW</a>
           <a href="" class="Wishlist">
@@ -300,7 +308,7 @@ crossorigin="anonymous"
           <div class="destiny2">
             <div class="transparent-box destiny2-transparent-box"></div>
           <h3 >Season of the Wish</h3>
-          <h4>Make a dangerous deal to get Riven’s brlast wish. Explore a labyrinth, uncover an Exotic mission, and earn new treasures.</h4>
+          <h4>Make a dangerous deal to get Riven’s brlast <br> wish. Explore a labyrinth, uncover an <br> Exotic mission, and earn new treasures.</h4>
           <h2>Free</h2>
           <a href="" class="buy">PLAY FOR FREE</a>
           <a href="" class="Wishlist">
@@ -402,8 +410,8 @@ crossorigin="anonymous"
       </div>
       <div class="Section1-part2">
       <div class="overflow"> 
-        <div class="category">
-        <div class="overflow-box">
+        <div class="category visible2">
+        <div class="overflow-box visible">
         <div class="overflow-games witchfire">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -420,7 +428,7 @@ crossorigin="anonymous"
           <h1>$16.73</h1>
           </div>
         </div>
-        <div class="overflow-box">
+        <div class="overflow-box visible">
         <div class="overflow-games Ghostrunner-2">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -437,7 +445,7 @@ crossorigin="anonymous"
           <h1 class="price">$23.79</h1>
           </div>
         </div>
-        <div class="overflow-box">
+        <div class="overflow-box visible">
         <div class="overflow-games Hogwarts-Legacy">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -454,7 +462,7 @@ crossorigin="anonymous"
           <h1>$35.99</h1>
           </div>
         </div>
-        <div class="overflow-box">
+        <div class="overflow-box visible">
           <div class="overflow-games Lords-of-the-Fallen">
             <div class="overflow-bg-color"></div>
             <div class="circle Wishlist-button">
@@ -471,7 +479,7 @@ crossorigin="anonymous"
           <h1>$38.99</h1>
           </div>
           </div>
-          <div class="overflow-box">
+          <div class="overflow-box none">
         <div class="overflow-games The-Crew™-Motorfest-Standard-Edition">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -816,8 +824,9 @@ crossorigin="anonymous"
     <section class="Developer-Spotlight">
       <div class="section2-part1">
         <h1 class="section2-title">Developer Spotlight - Remedy Entertainment</h1>
-        <div class="category">
-          <div class="overflow-box">
+        <div class="overflow">
+        <div class="category visible2">
+          <div class="overflow-box visible">
           <div class="overflow-games Alan-Wake-2">
             <div class="overflow-bg-color"></div>
             <div class="circle Wishlist-button">
@@ -834,7 +843,7 @@ crossorigin="anonymous"
             <h1>$36.39</h1>
             </div>
           </div>
-          <div class="overflow-box">
+          <div class="overflow-box visible">
           <div class="overflow-games Alan-Wake-2-Deluxe-Edition">
             <div class="overflow-bg-color"></div>
             <div class="circle Wishlist-button">
@@ -851,7 +860,7 @@ crossorigin="anonymous"
             <h1 class="price">$50.95</h1>
             </div>
           </div>
-          <div class="overflow-box">
+          <div class="overflow-box visible">
           <div class="overflow-games Alan-Wake’s-American-Nightmare">
             <div class="overflow-bg-color">
               <div class="awr-transparent"></div>
@@ -870,7 +879,7 @@ crossorigin="anonymous"
             <h1>$1.31</h1>
             </div>
           </div>
-          <div class="overflow-box">
+          <div class="overflow-box visible">
             <div class="overflow-games Control">
               <div class="overflow-bg-color"></div>
               <div class="circle Wishlist-button">
@@ -905,6 +914,7 @@ crossorigin="anonymous"
             </div>
             </div>
           </div>
+        </div>
       </div>
       <div class="section2-part2">
         <div class="side-top">
@@ -941,8 +951,11 @@ crossorigin="anonymous"
     <!---------- Section3 Start ---------->
 
     <section class="Fortnite-Experiences">
+      <div class="pack pack1">
       <h1 class="section3-title">Fortnite Experiences</h1>
       <div class="btn-fortnite"><h1>VISIT FORTNITE.COM</h1></div>
+      </div>
+      <div class="pack pack2">
       <div class="fortnite-event">
       <div class="Experience lego-fortnite">
         <div class="section3-bg-color"></div>
@@ -979,6 +992,8 @@ crossorigin="anonymous"
       <h3>Fortnite Festival</h3>
       <h1>Free</h1>
       </div>
+      </div>
+      <div class="pack pack3">
       <div class="fortnit-ad">
         <div class="fortnit-ad-image">
           <div class="section3-bg-color"></div>
@@ -994,6 +1009,7 @@ crossorigin="anonymous"
         <h1>Fall Guys</h1>
         <p>Treat your elves and yourselves with the Winter Blunderland Fame Pass. Available until January 15.</p>
         <h2>Play For Free</h2>
+      </div>
       </div>
     </section>
     
@@ -1013,7 +1029,7 @@ crossorigin="anonymous"
               </div>
               <div class="tooltip"><p>Add to Wishlist</p></div>
           </div>
-          <h1>EA SPORTS FC™ 24 Standard...
+          <h1>EA SPORTS FC™ 24 
             <div class="flex">
               <div class="discount"><p class="discount-text">-60%</p></div>
               <h1><del><span>$69.99</span></del></h1>
@@ -1073,7 +1089,7 @@ crossorigin="anonymous"
               </div>
               <div class="tooltip"><p>Add to Wishlist</p></div>
           </div>
-          <h1 class="game-library-title">Avatar: Frontiers of Pandora
+          <h1 class="game-library-title">Frontiers of Pandora
             <div class="details">
               <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6.3602 2.0818C6.4185 1.97273 6.58139 1.97273 6.6397 2.0818L8.70321 5.94205C8.7474 6.0247 8.85857 6.04959 8.93649 5.99428L11.7492 3.99743C11.8662 3.91436 12.0281 4.01539 11.9958 4.15134L10.7776 9.28015C10.7614 9.34853 10.6978 9.39706 10.6246 9.39706H2.3754C2.30211 9.39706 2.23858 9.34853 2.22233 9.28014L1.00418 4.15134C0.971887 4.01539 1.13376 3.91436 1.25077 3.99743L4.06348 5.99427C4.1414 6.04959 4.25258 6.0247 4.29676 5.94205L6.3602 2.0818Z" fill="#FFD15C"/>
@@ -1154,7 +1170,7 @@ crossorigin="anonymous"
         </li>
       </ul>
       <ul>
-        <h1>Top Upcoming Wishlisted</h1>
+        <h1>Top Wishlisted</h1>
         <div class="view-more-btn2"><p>VIEW MORE</p></div>
         <li>
           <div class="game-library-image Black-Myth-Wukong">
@@ -1232,9 +1248,9 @@ crossorigin="anonymous"
     <section class="Trending">
       <h1 class="section5-title">Trending</h1>
       <div class="view-more-btn2"><p>VIEW MORE</p></div>
-    <div>
-      <div class="category">
-        <div class="overflow-box">
+      <div class="overflow">
+      <div class="category visible2">
+        <div class="overflow-box visible">
         <div class="overflow-games Cursed-to-Golf">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -1250,7 +1266,7 @@ crossorigin="anonymous"
           <h1>Free</h1>
           </div>
         </div>
-        <div class="overflow-box">
+        <div class="overflow-box visible">
         <div class="overflow-games Human-Resource-Machine">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -1266,7 +1282,7 @@ crossorigin="anonymous"
           <h1 class="price">$2.37</h1>
           </div>
         </div>
-        <div class="overflow-box">
+        <div class="overflow-box visible">
         <div class="overflow-games Honkai-Star-Rail">
           <div class="overflow-bg-color"></div>
           <div class="circle Wishlist-button">
@@ -1281,7 +1297,7 @@ crossorigin="anonymous"
           <h4>Free</h4>
           </div>
         </div>
-        <div class="overflow-box">
+        <div class="overflow-box visible">
           <div class="overflow-games Lives-Arena">
             <div class="overflow-bg-color"></div>
             <div class="circle Wishlist-button">
@@ -1344,7 +1360,7 @@ crossorigin="anonymous"
               </div>
               <div class="tooltip"><p>Add to Wishlist</p></div>
           </div>
-          <h1 class="game-library-title">Alice's Jigsaw. Wonderland...
+          <h1 class="game-library-title">Alice's Jigsaw
               <div class="details details2">
               <p>NOW ON EPIC</p>
               </div>
@@ -1390,7 +1406,7 @@ crossorigin="anonymous"
         </li>
       </ul>
       <ul class="border2">
-        <h1>Top Player Rated</h1>
+        <h1>Top Rated</h1>
         <div class="view-more-btn2"><p>VIEW MORE</p></div>
         <li>
           <div class="game-library-image Five-Nights-at-Freddy">
@@ -1399,7 +1415,7 @@ crossorigin="anonymous"
               </div>
               <div class="tooltip"><p>Add to Wishlist</p></div>
           </div>
-          <h1 class="game-library-title">Five Nights at Freddy's:...
+          <h1 class="game-library-title">Five Nights at Freddy's
             <div class="flex">
               <h5>$18.99</h5>
             </div>
@@ -1455,7 +1471,7 @@ crossorigin="anonymous"
               </div>
               <div class="tooltip"><p>Add to Wishlist</p></div>
           </div>
-          <h1>The Telltale Batman Shadows...
+          <h1>The Telltale Batman 
             <div class="flex">
               <div class="discount"><p class="discount-text">-65%</p></div>
               <h1><del><span>$13.99</span></del></h1>
@@ -1573,8 +1589,8 @@ crossorigin="anonymous"
   </div>
   <div class="Section7-part2">
   <div class="overflow"> 
-    <div class="category">
-    <div class="overflow-box">
+    <div class="category visible2">
+    <div class="overflow-box visible">
     <div class="overflow-games Ghostwire">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -1591,7 +1607,7 @@ crossorigin="anonymous"
       <h1>$16.16</h1>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
     <div class="overflow-games VALORANT">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -1606,7 +1622,7 @@ crossorigin="anonymous"
       <h5>Free</h5>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
     <div class="overflow-games The-Outer-Worlds">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -1623,7 +1639,7 @@ crossorigin="anonymous"
       <h1>$29.99</h1>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
       <div class="overflow-games Red-Dead-Redemption">
         <div class="overflow-bg-color"></div>
         <div class="circle Wishlist-button">
@@ -1864,8 +1880,8 @@ crossorigin="anonymous"
   </div>
   <div class="Section8-part2">
   <div class="overflow"> 
-    <div class="category">
-    <div class="overflow-box">
+    <div class="category visible2">
+    <div class="overflow-box visible">
     <div class="overflow-games Honkai-Star-Rail">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -1880,7 +1896,7 @@ crossorigin="anonymous"
       <h5>Free</h5>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
     <div class="overflow-games Genshin-Impact">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -1895,7 +1911,7 @@ crossorigin="anonymous"
       <h5>Free</h5>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
     <div class="overflow-games Tower-of-Fantasy">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -1910,7 +1926,7 @@ crossorigin="anonymous"
         <h5>Free</h5>
         </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
       <div class="overflow-games SYNCED">
         <div class="overflow-bg-color"></div>
         <div class="circle Wishlist-button">
@@ -2191,7 +2207,7 @@ crossorigin="anonymous"
   </div>
   <div class="Section9-part2">
   <div class="overflow"> 
-    <div class="category">
+    <div class="category visible2">
     <div class="overflow-box">
     <div class="overflow-games DNF">
       <div class="overflow-bg-color"></div>
@@ -2207,7 +2223,7 @@ crossorigin="anonymous"
       <h6>$49.99</h6>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
     <div class="overflow-games Melvor-Idle">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -2225,7 +2241,7 @@ crossorigin="anonymous"
       <h6>$6.29</h6>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
     <div class="overflow-games Tales-of-the-Tiny-Planet">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
@@ -2240,7 +2256,7 @@ crossorigin="anonymous"
       <h6>$4.69</h6>
       </div>
     </div>
-    <div class="overflow-box">
+    <div class="overflow-box visible">
       <div class="overflow-games Indoorlands">
         <div class="overflow-bg-color"></div>
         <div class="circle Wishlist-button">
@@ -2255,7 +2271,7 @@ crossorigin="anonymous"
       <h6>$8.89</h6>
       </div>
       </div>
-      <div class="overflow-box">
+      <div class="overflow-box visible">
     <div class="overflow-games Battle-Planet">
       <div class="overflow-bg-color"></div>
       <div class="circle Wishlist-button">
