--- a/Epic Games/index.html
+++ b/Epic Games/index.html
@@ -138,7 +138,7 @@ crossorigin="anonymous"
       </div>
       <div class="sub-menu-item sub-menu-item2">
         <img src="image/epicLogo.png" alt="" class="epic-image">
-        <p class="sub-menu-text sub-menu-text2">  Publish on Epic Games Store</p>
+        <p class="sub-menu-text sub-menu-text2">  Publish on Epic Games </p>
     </div>
     <div class="sub-menu-item sub-menu-item2">
       <div class="logo logo5" style="
